# python-service-example

./: .cursorrules  .dockeringore  .gitignore  README.md  __init__.py  pyproject.toml
.cursor/rules/: fast-api-rules.mdc  service-creation.mdc
app/: .env.example  __init__.py  __main__.py  config.py  database.py  main.py  models.py
app/db/: __init__.py  database.py  enums.py  models.py  utils.py
app/projects/: project_crud.py  project_routes.py  project_schemas.py
app/scripts/: gen_users.py  init.sql  insert_data.sql
app/tasks/: __init__.py  task_crud.py  task_routes.py  task_schemas.py
app/users/: __init__.py  user_crud.py  user_deps.py  user_routes.py  user_schemas.py
docker/: README.md  docker-compose.yml
docs/: fastapi.md  fastapi_psycopg.md  pydantic.md  python_basic.md
