[project]
name = "service-example"
version = "0.1.0"
description = "backend service example for NeCloud"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Gassa", email = "gassa0617@gmail.com"  }
]
dependencies = [
    "cryptography>=44.0.2",
    "fastapi>=0.115.12",
    "fmtm-splitter>=2.0.0",
    "httptools>=0.6.4",
    "loguru>=0.7.3",
    "psycopg[pool]>=3.2.6",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]
